--- a/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="SimpleWeather.UWP.Controls.ForecastItem"
+    x:Class="SimpleWeather.UWP.Controls.HourlyForecastItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleWeather.Controls"
@@ -23,10 +23,9 @@
         </Style>
         <Style x:Key="ForecastTemp" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="24" />
             <Setter Property="Padding" Value="5"/>
-            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
         <Style x:Key="ForecastCondition" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
@@ -41,21 +40,29 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Style="{StaticResource ForecastDate}" Text="{Binding Date, FallbackValue=Thursday 29}" Grid.Row="0"/>
-        <Viewbox Style="{StaticResource ForecastIcon}" Height="Auto" Grid.Row="1">
-            <TextBlock Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon, FallbackValue='&#xf00d;'}" />
-        </Viewbox>
+        <TextBlock Style="{StaticResource ForecastDate}" Text="{Binding Date, FallbackValue='Sat 2 AM'}" Grid.Row="0"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Height="60">
+            <Viewbox Style="{StaticResource ForecastIcon}" Height="50" Width="50">
+                <TextBlock Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon, FallbackValue='&#xf00d;'}"/>
+            </Viewbox>
+            <TextBlock Text="{Binding HiTemp, FallbackValue=70º}" Style="{StaticResource ForecastTemp}"/>
+        </StackPanel>
         <TextBlock Style="{StaticResource ForecastCondition}" Text="{Binding Condition, FallbackValue='Scattered Thunderstorms'}" Grid.Row="2"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Row="3">
-            <TextBlock Text="{Binding HiTemp, FallbackValue=70º}" Padding="10,5,5,5"
-                           Style="{StaticResource ForecastTemp}"/>
-            <TextBlock FontSize="16" Text="{Binding LoTemp, FallbackValue=65º}"
-                           Foreground="LightGray"
-                           Style="{StaticResource ForecastTemp}" />
+        <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Left">
+            <TextBlock Style="{StaticResource WeatherIcon}" Text="&#xf078;" Padding="10,5"
+                       FontSize="14"/>
+            <TextBlock Text="{Binding PoP, FallbackValue='100%'}"
+                       VerticalAlignment="Center" Foreground="White" />
+            <Rectangle Width="10"/>
+            <TextBlock Name="WindDirection" Style="{StaticResource WeatherIcon}" Text="&#xf058;" Padding="10,5"
+                       RenderTransformOrigin="0.5,0.5" RenderTransform="{Binding WindDirection}"
+                       FontSize="14"/>
+            <TextBlock Text="{Binding WindSpeed, FallbackValue='5.8 mph'}"
+                       VerticalAlignment="Center" Foreground="White" />
         </StackPanel>
     </Grid>
 </UserControl>
