--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="SimpleWeather.Controls.LocationPanel"
+    x:Class="SimpleWeather.UWP.Controls.LocationPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
