SimpleWeather: add credits to Settings
* Update SettingsPage UI
* Add credits for weather providers
* Add credits and licenses for open source libraries used
* Add version number to Settings
* Identify weather provider on WeatherNow page

--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -604,6 +604,14 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/weather_credit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
+                tools:text="Data from WeatherUnderground" />
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.v4.widget.SwipeRefreshLayout>
