SimpleWeather: code cleanup
* Cleanup code
* Log exceptions

--- a/SimpleWeather.UWP/Shell.xaml
+++ b/SimpleWeather.UWP/Shell.xaml
@@ -140,7 +140,7 @@
                 </StackPanel>
             </SplitView.Pane>
             <SplitView.Content>
-                <Frame x:Name="Content" Margin="0,-48,0,0"/>
+                <Frame x:Name="FrameContent" Margin="0,-48,0,0"/>
             </SplitView.Content>
         </SplitView>
         <VisualStateManager.VisualStateGroups>
